ingress/webservers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    project: webservers
spec:
  selector:
    matchLabels:
      project: webservers
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        project: webservers
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    project: webservers
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    project: webservers
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    project: webservers
spec:
  selector:
    matchLabels:
      project: webservers
      app: apache
  replicas: 1
  template:
    metadata:
      labels:
        project: webservers
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: apache
  labels:
    project: webservers
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    project: webservers
    app: apache
---
